Upgrade to java 14 for text block preview
- Especially useful for code snippets